updating the index html file

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -3,10 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journey To Self - Home</title>
+    <title>Learning HTML with Lorem Ipsum</title>
 </head>
 <body>
-    <h1>Welcome to Journey to Self!</h1>
-    <p>We empower and support individuals throughout their journey towards self-love</p>
+    <h1>Lorem Ipsum</h1> <br><br><br>
+    <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
+    <h4>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+    </h4>
+    <hr>
+
+    <h2><b><i>What is Lorem Ipsum?</i></b></h2>
+    <p><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+    <h2><b><i>Where does it come from?</i></b></h2>
+    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+
+    <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+
+    <h2><b><i>Why do we use it?</i></b></h2>
+    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+
+    <h2><b><i>Where can I get some?</i></b></h2>
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p> <br>
+    You may find additional information by following the link hereby: <a href="https://www.lipsum.com/" target="_blank">Lorem Ipsum</a> <br>
+
+    <h2>More features</h2>
+    Now let's look at more HTML features, shall we?
+
+    <h3>Images</h3>
+    <p>“Lorem Ipsum...but for photos” reads the tagline. And that's precisely what Lorem Picsum offers. You can use the image's link OR download the image in the projects folder then add the file's name in the tagline instead</p>
+    I saved the file but used the image's link, and added borders to the image.
+    <img src="https://picsum.photos/640/360" border="10">
+
+    <h2>Lists</h2>
+    We need to use the <i>"ul" or "ol" tag</i>, depending on the preference for ordered or unordered lists. See below: <br>
+    <ol>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+        <li>Sed elementum nulla sit amet dolor viverra, vel ultrices leo gravida.</li>
+        Aenean ullamcorper quam vel pretium luctus. 
+        <li>Fusce tincidunt libero eu tellus luctus scelerisque.</li>
+    </ol>
+
+    <h2>TABLES</h2>
+    We need to use the <i>"table", "tr"=table row, "th"= table header, "td"= table data tags</i>.
+    We can use indexes like <i>border</i>, <i>cellpadding</i>, <i>rowspan</i> and <i>cellspacing</i>
+
+    <table border="5" cellpadding="2" cellspacing="0">
+        <tr>
+            <th></th>
+            <th>Month</th>
+            <th>Rent</th>
+            <th>Transportation</th>
+            <th>Utilities</th>
+            <th>Food</th>
+            <th>Entertainment</th>
+            <th>Shopping</th>
+        </tr>
+        <tr>
+            <td rowspan="2">Spring</td>
+            <td>March</td>
+            <td>1500</td>
+            <td>1000</td>
+            <td>100</td>
+            <td>500</td>
+            <td>300</td>
+            <td>400</td>
+        </tr>
+        <tr>
+            <td>Spring</td>
+            <td>April</td>
+            <td>1500</td>
+            <td>800</td>
+            <td>50</td>
+            <td>400</td>
+            <td>300</td>
+            <td>300</td>
+        </tr>
+    </table>
+    <br>
+
+    <h3><u>Additional Resources</u></h3>
+    <p>For more information on creating a website using HTML tags, you may check out this interesting youtube video: <a href="https://www.youtube.com/watch?v=PlxWf493en4" target="_blank">HTML Tutorial - How to Make a Super Simple Website</a></p>
+    For your convenience, here is a quick link to a cheat sheet with tips and tricks on mastering the HTML markup language. <a href="https://coder-coder.com/how-to-make-simple-website-html//" target="_blank">HyperText Markup Language</a><br>
+    <h3>I hope you enjoyed! :)</h3>
 </body>
 </html>
